--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Edu - Sistema de Ensino</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,7 +73,7 @@
                 </div>
                                     <img src="assets/img/slide2.png" alt="Menina com tablet" class="slide2-image" style="position: absolute; bottom: -100px; left: 50px; width: 650px; height: auto; z-index: 10; display: none;">
                 <img src="assets/img/eimagem.png" alt="Elemento decorativo E" style="position: absolute; top: -280px; right: -400px; width: 520px; max-width: 80vw; height: auto; z-index: 0; pointer-events: none;">
-                <img src="assets/img/ava.png" alt="AVA Logo" class="ava-mini-logo" style="position: absolute; top: 420px; right: -120px; width: 520px; height: auto; z-index: 1; box-shadow: none; transition: none;">
+                <img src="assets/img/ava.png" alt="AVA Logo" class="ava-mini-logo" style="position: absolute; top: 420px; right: -120px; width: 520px; height: auto; z-index: 1; box-shadow: none; transition: none; pointer-events: none;">
             </div>
         </section>
 
@@ -109,33 +108,33 @@
                     </div>
                     <div class="education-bubble bubble-1">
                         Conectividade<br> e Infraestrutura
-                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Levamos internet de<br>alta performance e instalamos APs<br>em cada sala de aula.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-2">Oferecemos uma<br>plataforma tecnológica<br>completa e integrada.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Garantimos acesso<br>ao conteúdo e à gestão de<br>forma simples e unificada.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Levamos internet de<br> alta performance e instalamos APs<br> em cada sala de aula.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-2">Oferecemos uma<br> plataforma tecnológica<br> completa e integrada.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Garantimos acesso<br> ao conteúdo e à gestão de<br> forma simples e unificada.</div>
                     </div>
                     <div class="education-bubble bubble-2">
                         Apoio Integral<br> ao Professor
-                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Material didático do<br>professor com comentários<br>e propostas de exercícios.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-2">IA própria que<br>auxilia na elaboração de<br>planos de aula e exercícios</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Cursos de capacitação em<br>nível de pós-graduação lato<br>sensu para educadores.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Material didático do<br> professor com comentários<br> e propostas de exercícios.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-2">IA própria que<br> auxilia na elaboração de<br> planos de aula e exercícios</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Cursos de capacitação em<br> nível de pós-graduação lato<br> sensu para educadores.</div>
                     </div>
                     <div class="education-bubble bubble-3">
                          Conteúdo<br> e Aprendizagem
-                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Disponibilizamos<br>material didático 100%<br>interativo para o aluno.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-2">IA que atua como<br>tutor particular para reforçar o<br>desempenho do aluno.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Foco na recomposição<br>de aprendizagem,<br>do 6º ano ao Ensino Médio.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Disponibilizamos<br> material didático 100%<br> interativo para o aluno.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-2">IA que atua como<br> tutor particular para reforçar o<br> desempenho do aluno.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Foco na recomposição<br> de aprendizagem,<br> do 6º ano ao Ensino Médio.</div>
                     </div>
                     <div class="education-bubble bubble-4">
                         Plataforma<br> Digital Integrada
-                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Ambiente Virtual de<br>Aprendizagem para a<br>realização de aulas interativas.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-2">Sistema de Gestão que<br>mensura a evolução do<br>aluno com notas e faltas.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Controle de eficiência da<br>aula e acompanhamento do<br>desempenho individual.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Ambiente Virtual de<br> Aprendizagem para a<br> realização de aulas interativas.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-2">Sistema de Gestão que<br> mensura a evolução do<br> aluno com notas e faltas.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-3">Controle de eficiência da<br> aula e acompanhamento do<br> desempenho individual.</div>
                     </div>
                     <div class="education-bubble bubble-5">
                         Laboratórios<br> para o Futuro
-                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Estruturas de baixa<br>complexidade com carrinhos de notebooks para as salas.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-2">Fornecimento<br>completo de laboratórios<br>de média complexidade.</div>
-                        <div class="education-bubble bubble sub-bubble sub-bubble-3 mobile-small-text">Laboratórios de alta complexidade<br>(eletrotécnica, enfermagem)<br>com todos os equipamentos.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-1">Estruturas de baixa<br> complexidade com carrinhos de notebooks para as salas.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-2">Fornecimento<br> completo de laboratórios<br> de média complexidade.</div>
+                        <div class="education-bubble bubble sub-bubble sub-bubble-3 mobile-small-text">Laboratórios de alta complexidade<br> (eletrotécnica, enfermagem)<br> com todos os equipamentos.</div>
                     </div>
                 </div>
                 <div class="solutions-image-wrapper">
